# quarto-hello-world

./: .gitignore  pyproject.toml
book/: _quarto.yml  hello-world-jupyter.ipynb  hello-world.qmd
book/_book/: index.html  intro.html  search.json
output/: hello-world-from-notebook.html  hello-world.html  hello.html  quarto-example.html
src/: hello-world.ipynb  hello-world.qmd  quarto-example.qmd
src/.jupyter_cache/: global.db
src/.jupyter_cache/executed/0d2155e61cd961b4019d60a833102055/: base.ipynb
src/.jupyter_cache/executed/166f70a22825b5cb409c5d6191ce0461/: base.ipynb
src/.jupyter_cache/executed/1e718b0de157bd3bb7dd3d2d2c3d8cef/: base.ipynb
src/.jupyter_cache/executed/2084aca9ab16d07f4277a2c027470d08/: base.ipynb
src/.jupyter_cache/executed/20ddd7a3e7294202746bba0e40b1ca85/: base.ipynb
src/.jupyter_cache/executed/6dd1acc38c9df7dee206e34c81a048b9/: base.ipynb
src/.jupyter_cache/executed/7801cb48b31c026c445d0d2579836fc5/: base.ipynb
src/.jupyter_cache/executed/7fc1a56f4023f06b475aee1371bbf5dd/: base.ipynb
src/.jupyter_cache/executed/e3a0516f92a170f6df77eb735541eb30/: base.ipynb
src/.jupyter_cache/executed/ee1de66bfddb2a62d01a7d1faed285e1/: base.ipynb
src/.jupyter_cache/executed/f08bc7a881406375d50319072419bbd3/: base.ipynb
src/.jupyter_cache/executed/fa059ad042b8439190355a6350520e4e/: base.ipynb
src/.jupyter_cache/executed/fadb3394d7097374046bb5f5914e3c84/: base.ipynb
utils/: styles.css
